# Agentic-AI-and-AI-Agents

./: .gitignore  LICENSE  README.md  Tavily AI News Summariser.excalidraw
ai_news_summariser/: README.md  install.sh  main.py  pyproject.toml  run.py
ai_news_summariser/front_end_ui/: streamlit_app.py
ai_news_summariser/front_end_ui/configs/: __init__.py  fe_confg.py  fe_config.json
ai_news_summariser/front_end_ui/models/: __init__.py  search_result.py  summaries_news.py
ai_news_summariser/mock_run/: mock_tavily.py
ai_news_summariser/mock_run/json_files/: extract_results.json  final_output.json  output_result.json  tavily_AI_Final_Summarised_Genre.json  tavily_AI_Genre_Summary.json  tavily_AI_Summary.json  tavily_AI_crawl.json  tavily_AI_response.json  tavily_response.json
ai_news_summariser/mock_run/models/: __init__.py  tavily_result.py
ai_news_summariser/news_agent_flow/: __init__.py  flow_graph.py
ai_news_summariser/news_agent_flow/agents/: __init__.py  news_summary_agent.py
ai_news_summariser/news_agent_flow/configs/: __init__.py  agent_config.json  agent_config.py
ai_news_summariser/news_agent_flow/llm/: __init__.py  gemini_llm.py  llm_factory.py  openai_llm.py
ai_news_summariser/news_agent_flow/models/: __init__.py  genre_summary.py  graph_state.py  news_summary.py  tavily_crawl_results.py  tavily_search_result.py
ai_news_summariser/news_agent_flow/nodes/: __init__.py  assign_genre_node.py  final_summary_node.py  search_web_node.py  summariser_node.py
ai_news_summariser/rest_api/: __init__.py  be_app.py  middle_ware.py  mongodb_crud.py
(+26 files in other folders)
